LS-2308 - get tags - controller done - time for tests.